--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,6 @@
-body {
-  margin: 0;
-}
+@import "blocks/page";
+@import "blocks/header";
+@import "blocks/top-bar";
+@import "blocks/icon";
+@import "blocks/menu";
+@import "blocks/nav";
